--- a/index.html
+++ b/index.html
@@ -1,14 +1,90 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
-    <title>Document</title>
-</head>
-<body>
-   <h1 class="text-3xl font-bold underline">
-      Hello world!
-    </h1>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="shortcut icon" href="./assets/logo.png" type="image/x-icon">
+    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+    <title>Joruri seha</title>
+  </head>
+  <body>
+    <header>
+      <navber>
+        <div>
+          <img src="./assets/logo.png" alt="" />
+          <h1>Emergency Services</h1>
+        </div>
+        <div>
+          <div>
+            <h1>0</h1>
+            <img src="./assets/heart.png" alt="" />
+          </div>
+          <div>
+            <h1>100</h1>
+            <img src="./assets/coin.png" alt="" srcset="" />
+          </div>
+          <div>
+            <h1>0</h1>
+            <h1>Copy</h1>
+          </div>
+        </div>
+      </navber>
+      <herobanner>
+        <img src="./assets/ambulance.png" alt="" />
+        <h1>Emergency Service Directory</h1>
+        <p>
+          Government Emergency Services at Your Fingertip – A Project by
+          Government of the People’s Republic of Bangladesh
+        </p>
+      </herobanner>
+    </header>
+    <main>
+      <div>
+        <table border="1" width="100%" cellpadding="50">
+          <tr>
+            <td>
+              <div>
+                <img src="./assets/brac.png" alt="">
+                <img src="./assets/brac.png" alt="">
+              </div>
+              <h3>Emergency Services</h3>
+              <p>Emergency Services</p>
+              <h2>999</h2>
+              <p>fire</p>
+              <div> 
+                <button> <img src="./assets/brac.png" alt=""> Copy </button>
+                <button><img src="./assets/coin.png" alt=""> cell</button>
+               </div>
+            </td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+          </tr>
+          <tr>
+            <td colspan="9">
+              <div>
+                <div>
+                  <img src="./assets/coin.png" alt="">
+                  <p>cell History</p>
+                </div>
+                <button>Clear</button>
+                <div>
+                  
+                </div>
+              </div>
+            </td>
+            <td colspan="3">History Section</td>
+          </tr>
+        </table>
+      </div>
+    </main>
+  </body>
 </html>
