card section done

--- a/index.html
+++ b/index.html
@@ -39,52 +39,201 @@
         </p>
       </herobanner>
     </header>
-    <main>
+    <main class="bg-[rgba(245,255,246,1)] p-10 ">
       <div>
-        <table border="1" width="100%" cellpadding="50">
-          <tr>
-            <td>
-              <div>
-                <img src="./assets/brac.png" alt="">
-                <img src="./assets/brac.png" alt="">
-              </div>
-              <h3>Emergency Services</h3>
-              <p>Emergency Services</p>
-              <h2>999</h2>
-              <p>fire</p>
-              <div> 
-                <button> <img src="./assets/copy-regular-full.svg" alt=""> Copy </button>
-                <button><img src="./assets/phone-solid-full.svg" alt=""> cell</button>
-               </div>
-            </td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-          </tr>
-          <tr>
-            <td colspan="9">
-              <div>
-                <div>
-                  <img src="./assets/coin.png" alt="">
-                  <p>cell History</p>
-                </div>
-                <button>Clear</button>
-                <div>
+    
 
+<table border=1 width="100%" cellpadding="50">
+<tr>
+    <td class="w-24"></td>
+     <td class="w-24"></td>
+    <td class="w-24"></td>
+    <td class="w-24"></td>
+    <td class="w-24"></td>
+   <td class="w-24"></td>
+   <td class="w-24"></td>
+   <td class="w-24"></td>
+    <td class="w-24"></td>
+   <td class="w-24"></td>
+   <td class="w-24"></td>
+    <td class="w-24"></td>
+ </tr>
+ <tr>
+    <td colspan=9 >
+      <div class="grid grid-cols-3 gap-6">
+      <div class="p-7 bg-white rounded-lg shadow-xl " >
+              <div class="flex justify-between items-center" >
+                <div class="bg-[rgba(223,239,255,1)] p-2 rounded-lg">
+                  <img src="./assets/police.png" alt="" class="w-8 h-8"/>
                 </div>
+                <button>
+                  <img src="./assets/heart-regular-full.svg" alt="" class="w-6 h-6"/>
+                </button>
               </div>
-            </td>
-            <td colspan="3">History Section</td>
-          </tr>
-        </table>
+              <h3 class="text-lg font-bold pt-4">Fire Service Number</h3>
+              <p class="text-md text-gray-400">Fire Service</p>
+              <h2 class="text-xl font-bold pt-5">999</h2>
+              <p class="bg-gray-200 text-center py-1 rounded-xl inlink-block w-12">fire</p>
+              <div class="flex justify-between items-center pt-5 gap-3"> 
+                <button class="flex justify-center items-center w-1/2 gap-2 border border-gray-200 py-1 rounded-lg"> <img src="./assets/copy-regular-full.svg" alt="" class="w-5 h-5"> Copy </button>
+                <button class="flex justify-center items-center w-1/2 gap-2 border border-gray-200 py-1 rounded-lg bg-[rgba(0,180,70,1)]"> <img src="./assets/phone-solid-full.svg" alt="" class="w-5 h-5"> call</button>
+               </div>
+      </div>
+      <div class="p-7 bg-white rounded-lg shadow-xl " >
+              <div class="flex justify-between items-center" >
+                <div class="bg-[rgba(223,239,255,1)] p-2 rounded-lg">
+                  <img src="./assets/police.png" alt="" class="w-8 h-8"/>
+                </div>
+                <button>
+                  <img src="./assets/heart-regular-full.svg" alt="" class="w-6 h-6"/>
+                </button>
+              </div>
+              <h3 class="text-lg font-bold pt-4">Fire Service Number</h3>
+              <p class="text-md text-gray-400">Fire Service</p>
+              <h2 class="text-xl font-bold pt-5">999</h2>
+              <p class="bg-gray-200 text-center py-1 rounded-xl inlink-block w-12">fire</p>
+              <div class="flex justify-between items-center pt-5 gap-3"> 
+                <button class="flex justify-center items-center w-1/2 gap-2 border border-gray-200 py-1 rounded-lg"> <img src="./assets/copy-regular-full.svg" alt="" class="w-5 h-5"> Copy </button>
+                <button class="flex justify-center items-center w-1/2 gap-2 border border-gray-200 py-1 rounded-lg bg-[rgba(0,180,70,1)]"> <img src="./assets/phone-solid-full.svg" alt="" class="w-5 h-5"> call</button>
+               </div>
+      </div>
+     <div class="p-7 bg-white rounded-lg shadow-xl " >
+              <div class="flex justify-between items-center" >
+                <div class="bg-[rgba(223,239,255,1)] p-2 rounded-lg">
+                  <img src="./assets/police.png" alt="" class="w-8 h-8"/>
+                </div>
+                <button>
+                  <img src="./assets/heart-regular-full.svg" alt="" class="w-6 h-6"/>
+                </button>
+              </div>
+              <h3 class="text-lg font-bold pt-4">Fire Service Number</h3>
+              <p class="text-md text-gray-400">Fire Service</p>
+              <h2 class="text-xl font-bold pt-5">999</h2>
+              <p class="bg-gray-200 text-center py-1 rounded-xl inlink-block w-12">fire</p>
+              <div class="flex justify-between items-center pt-5 gap-3"> 
+                <button class="flex justify-center items-center w-1/2 gap-2 border border-gray-200 py-1 rounded-lg"> <img src="./assets/copy-regular-full.svg" alt="" class="w-5 h-5"> Copy </button>
+                <button class="flex justify-center items-center w-1/2 gap-2 border border-gray-200 py-1 rounded-lg bg-[rgba(0,180,70,1)]"> <img src="./assets/phone-solid-full.svg" alt="" class="w-5 h-5"> call</button>
+               </div>
+      </div>
+      <div class="p-7 bg-white rounded-lg shadow-xl " >
+              <div class="flex justify-between items-center" >
+                <div class="bg-[rgba(223,239,255,1)] p-2 rounded-lg">
+                  <img src="./assets/police.png" alt="" class="w-8 h-8"/>
+                </div>
+                <button>
+                  <img src="./assets/heart-regular-full.svg" alt="" class="w-6 h-6"/>
+                </button>
+              </div>
+              <h3 class="text-lg font-bold pt-4">Fire Service Number</h3>
+              <p class="text-md text-gray-400">Fire Service</p>
+              <h2 class="text-xl font-bold pt-5">999</h2>
+              <p class="bg-gray-200 text-center py-1 rounded-xl inlink-block w-12">fire</p>
+              <div class="flex justify-between items-center pt-5 gap-3"> 
+                <button class="flex justify-center items-center w-1/2 gap-2 border border-gray-200 py-1 rounded-lg"> <img src="./assets/copy-regular-full.svg" alt="" class="w-5 h-5"> Copy </button>
+                <button class="flex justify-center items-center w-1/2 gap-2 border border-gray-200 py-1 rounded-lg bg-[rgba(0,180,70,1)]"> <img src="./assets/phone-solid-full.svg" alt="" class="w-5 h-5"> call</button>
+               </div>
+      </div>
+     <div class="p-7 bg-white rounded-lg shadow-xl " >
+              <div class="flex justify-between items-center" >
+                <div class="bg-[rgba(223,239,255,1)] p-2 rounded-lg">
+                  <img src="./assets/police.png" alt="" class="w-8 h-8"/>
+                </div>
+                <button>
+                  <img src="./assets/heart-regular-full.svg" alt="" class="w-6 h-6"/>
+                </button>
+              </div>
+              <h3 class="text-lg font-bold pt-4">Fire Service Number</h3>
+              <p class="text-md text-gray-400">Fire Service</p>
+              <h2 class="text-xl font-bold pt-5">999</h2>
+              <p class="bg-gray-200 text-center py-1 rounded-xl inlink-block w-12">fire</p>
+              <div class="flex justify-between items-center pt-5 gap-3"> 
+                <button class="flex justify-center items-center w-1/2 gap-2 border border-gray-200 py-1 rounded-lg"> <img src="./assets/copy-regular-full.svg" alt="" class="w-5 h-5"> Copy </button>
+                <button class="flex justify-center items-center w-1/2 gap-2 border border-gray-200 py-1 rounded-lg bg-[rgba(0,180,70,1)]"> <img src="./assets/phone-solid-full.svg" alt="" class="w-5 h-5"> call</button>
+               </div>
+      </div>
+      <div class="p-7 bg-white rounded-lg shadow-xl " >
+              <div class="flex justify-between items-center" >
+                <div class="bg-[rgba(223,239,255,1)] p-2 rounded-lg">
+                  <img src="./assets/police.png" alt="" class="w-8 h-8"/>
+                </div>
+                <button>
+                  <img src="./assets/heart-regular-full.svg" alt="" class="w-6 h-6"/>
+                </button>
+              </div>
+              <h3 class="text-lg font-bold pt-4">Fire Service Number</h3>
+              <p class="text-md text-gray-400">Fire Service</p>
+              <h2 class="text-xl font-bold pt-5">999</h2>
+              <p class="bg-gray-200 text-center py-1 rounded-xl inlink-block w-12">fire</p>
+              <div class="flex justify-between items-center pt-5 gap-3"> 
+                <button class="flex justify-center items-center w-1/2 gap-2 border border-gray-200 py-1 rounded-lg"> <img src="./assets/copy-regular-full.svg" alt="" class="w-5 h-5"> Copy </button>
+                <button class="flex justify-center items-center w-1/2 gap-2 border border-gray-200 py-1 rounded-lg bg-[rgba(0,180,70,1)]"> <img src="./assets/phone-solid-full.svg" alt="" class="w-5 h-5"> call</button>
+               </div>
+      </div>
+      <div class="p-7 bg-white rounded-lg shadow-xl " >
+              <div class="flex justify-between items-center" >
+                <div class="bg-[rgba(223,239,255,1)] p-2 rounded-lg">
+                  <img src="./assets/police.png" alt="" class="w-8 h-8"/>
+                </div>
+                <button>
+                  <img src="./assets/heart-regular-full.svg" alt="" class="w-6 h-6"/>
+                </button>
+              </div>
+              <h3 class="text-lg font-bold pt-4">Fire Service Number</h3>
+              <p class="text-md text-gray-400">Fire Service</p>
+              <h2 class="text-xl font-bold pt-5">999</h2>
+              <p class="bg-gray-200 text-center py-1 rounded-xl inlink-block w-12">fire</p>
+              <div class="flex justify-between items-center pt-5 gap-3"> 
+                <button class="flex justify-center items-center w-1/2 gap-2 border border-gray-200 py-1 rounded-lg"> <img src="./assets/copy-regular-full.svg" alt="" class="w-5 h-5"> Copy </button>
+                <button class="flex justify-center items-center w-1/2 gap-2 border border-gray-200 py-1 rounded-lg bg-[rgba(0,180,70,1)]"> <img src="./assets/phone-solid-full.svg" alt="" class="w-5 h-5"> call</button>
+               </div>
+      </div>
+      <div class="p-7 bg-white rounded-lg shadow-xl " >
+              <div class="flex justify-between items-center" >
+                <div class="bg-[rgba(223,239,255,1)] p-2 rounded-lg">
+                  <img src="./assets/police.png" alt="" class="w-8 h-8"/>
+                </div>
+                <button>
+                  <img src="./assets/heart-regular-full.svg" alt="" class="w-6 h-6"/>
+                </button>
+              </div>
+              <h3 class="text-lg font-bold pt-4">Fire Service Number</h3>
+              <p class="text-md text-gray-400">Fire Service</p>
+              <h2 class="text-xl font-bold pt-5">999</h2>
+              <p class="bg-gray-200 text-center py-1 rounded-xl inlink-block w-12">fire</p>
+              <div class="flex justify-between items-center pt-5 gap-3"> 
+                <button class="flex justify-center items-center w-1/2 gap-2 border border-gray-200 py-1 rounded-lg"> <img src="./assets/copy-regular-full.svg" alt="" class="w-5 h-5"> Copy </button>
+                <button class="flex justify-center items-center w-1/2 gap-2 border border-gray-200 py-1 rounded-lg bg-[rgba(0,180,70,1)]"> <img src="./assets/phone-solid-full.svg" alt="" class="w-5 h-5"> call</button>
+               </div>
+      </div>
+      <div class="p-7 bg-white rounded-lg shadow-xl " >
+              <div class="flex justify-between items-center" >
+                <div class="bg-[rgba(223,239,255,1)] p-2 rounded-lg">
+                  <img src="./assets/police.png" alt="" class="w-8 h-8"/>
+                </div>
+                <button>
+                  <img src="./assets/heart-regular-full.svg" alt="" class="w-6 h-6"/>
+                </button>
+              </div>
+              <h3 class="text-lg font-bold pt-4">Fire Service Number</h3>
+              <p class="text-md text-gray-400">Fire Service</p>
+              <h2 class="text-xl font-bold pt-5">999</h2>
+              <p class="bg-gray-200 text-center py-1 rounded-xl inlink-block w-12">fire</p>
+              <div class="flex justify-between items-center pt-5 gap-3"> 
+                <button class="flex justify-center items-center w-1/2 gap-2 border border-gray-200 py-1 rounded-lg"> <img src="./assets/copy-regular-full.svg" alt="" class="w-5 h-5"> Copy </button>
+                <button class="flex justify-center items-center w-1/2 gap-2 border border-gray-200 py-1 rounded-lg bg-[rgba(0,180,70,1)]"> <img src="./assets/phone-solid-full.svg" alt="" class="w-5 h-5"> call</button>
+               </div>
+      </div>
+    </div></td>
+    <td colspan=3 valign="top">
+      <div class="ml-6 p-5 bg-white rounded-lg shadow-xl h-[154vh]">
+        <div class="h-full">
+          history
+        </div>
+   
+      </div>
+    </td>
+ </tr>
+</table>
       </div>
     </main>
   </body>
