history section done

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                   <img src="./assets/police.png" alt="" class="w-8 h-8"/>
                 </div>
                 <button>
-                  <img src="./assets/heart-regular-full.svg" alt="" class="w-6 h-6"/>
+                  <img src="./assets/heart-regular-full.svg" alt="" class="w-6 h-6 heart-button"/>
                 </button>
               </div>
               <h3 class="text-lg font-bold pt-4">Fire Service Number</h3>
@@ -85,7 +85,7 @@
                   <img src="./assets/police.png" alt="" class="w-8 h-8"/>
                 </div>
                 <button>
-                  <img src="./assets/heart-regular-full.svg" alt="" class="w-6 h-6"/>
+                  <img src="./assets/heart-regular-full.svg" alt="" class="w-6 h-6 heart-button"/>
                 </button>
               </div>
               <h3 class="text-lg font-bold pt-4">Fire Service Number</h3>
@@ -103,7 +103,7 @@
                   <img src="./assets/police.png" alt="" class="w-8 h-8"/>
                 </div>
                 <button>
-                  <img src="./assets/heart-regular-full.svg" alt="" class="w-6 h-6"/>
+                  <img src="./assets/heart-regular-full.svg" alt="" class="w-6 h-6 heart-button"/>
                 </button>
               </div>
               <h3 class="text-lg font-bold pt-4">Fire Service Number</h3>
@@ -121,7 +121,7 @@
                   <img src="./assets/police.png" alt="" class="w-8 h-8"/>
                 </div>
                 <button>
-                  <img src="./assets/heart-regular-full.svg" alt="" class="w-6 h-6"/>
+                  <img src="./assets/heart-regular-full.svg" alt="" class="w-6 h-6 heart-button"/>
                 </button>
               </div>
               <h3 class="text-lg font-bold pt-4">Fire Service Number</h3>
@@ -139,7 +139,7 @@
                   <img src="./assets/police.png" alt="" class="w-8 h-8"/>
                 </div>
                 <button>
-                  <img src="./assets/heart-regular-full.svg" alt="" class="w-6 h-6"/>
+                  <img src="./assets/heart-regular-full.svg" alt="" class="w-6 h-6 heart-button"/>
                 </button>
               </div>
               <h3 class="text-lg font-bold pt-4">Fire Service Number</h3>
@@ -157,7 +157,7 @@
                   <img src="./assets/police.png" alt="" class="w-8 h-8"/>
                 </div>
                 <button>
-                  <img src="./assets/heart-regular-full.svg" alt="" class="w-6 h-6"/>
+                  <img src="./assets/heart-regular-full.svg" alt="" class="w-6 h-6 heart-button"/>
                 </button>
               </div>
               <h3 class="text-lg font-bold pt-4">Fire Service Number</h3>
@@ -175,7 +175,7 @@
                   <img src="./assets/police.png" alt="" class="w-8 h-8"/>
                 </div>
                 <button>
-                  <img src="./assets/heart-regular-full.svg" alt="" class="w-6 h-6"/>
+                  <img src="./assets/heart-regular-full.svg" alt="" class="w-6 h-6 heart-button"/>
                 </button>
               </div>
               <h3 class="text-lg font-bold pt-4">Fire Service Number</h3>
@@ -193,7 +193,7 @@
                   <img src="./assets/police.png" alt="" class="w-8 h-8"/>
                 </div>
                 <button>
-                  <img src="./assets/heart-regular-full.svg" alt="" class="w-6 h-6"/>
+                  <img src="./assets/heart-regular-full.svg" alt="" class="w-6 h-6 heart-button"/>
                 </button>
               </div>
               <h3 class="text-lg font-bold pt-4">Fire Service Number</h3>
@@ -211,7 +211,7 @@
                   <img src="./assets/police.png" alt="" class="w-8 h-8"/>
                 </div>
                 <button>
-                  <img src="./assets/heart-regular-full.svg" alt="" class="w-6 h-6"/>
+                  <img src="./assets/heart-regular-full.svg" alt="" class="w-6 h-6 heart-button"/>
                 </button>
               </div>
               <h3 class="text-lg font-bold pt-4">Fire Service Number</h3>
@@ -226,10 +226,23 @@
     </div></td>
     <td colspan=3 valign="top">
       <div class="ml-6 p-5 bg-white rounded-lg shadow-xl h-[154vh]">
-        <div class="h-full">
-          history
+        <div class="flex  items-center justify-between pt-3 ">
+          <div class="flex gap-2 items-center justify-center">
+            <img src="./assets/clock-regular-full.svg" alt="" class="w-7 h-7">
+            <p class="text-lg font-semibold">Call History </p>
+          </div>
+          <button class="text-md font-medium text-center text-white px-6 py-2 rounded-full bg-[rgba(0,166,62,1)]">clear</button>
         </div>
-   
+        <div>
+          <div class="bg-gray-100 rounded-lg p-3 mt-6 flex justify-between items-center">
+            <div>
+
+              <h3 class="font-bold text-sm">Fire Service Number</h3>
+              <p class=" text-sm">999</p>
+            </div>
+              <p class="text-sm text-gray-500">11:11:58 AM </p>
+          </div>
+        </div>
       </div>
     </td>
  </tr>
