--- a/index.html
+++ b/index.html
@@ -305,12 +305,12 @@
   <div class="flex items-center justify-between pt-3">
     <div class="flex gap-2 items-center justify-center">
       <img src="./assets/clock-regular-full.svg" alt="" class="w-7 h-7">
-      <p class="text-lg font-semibold">Call History</p>
+      <p class="text-lg font-semibold ">Call History</p>
     </div>
-    <button id="clear-history" class="text-md font-medium text-center text-white px-6 py-2 rounded-full bg-[rgba(0,166,62,1)]">Clear</button>
+    <button id="clear-history" class="text-md font-medium text-center text-white px-6 py-2 rounded-full bg-[rgba(0,166,62,1)] hover:cursor-pointer hover:bg-[rgba(0,150,62,1)]">Clear</button>
   </div>
   <div class="call-history mt-3">
-    <!-- call entries will be appended here -->
+  
   </div>
 </div>
 
